--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </tbody>
     </table>
     <tr>
-        <td><divv class="circle-image"><img src="https://yt3.googleusercontent.com/ytc/AOPolaR_8EZmcpvOc8fDQCXTMGaZCW1reWRoYXyLnUE=s900-c-k-c0x00ffffff-no-rj" alt="circle"></divv></td>
+        <td><divv class="circle-image"><img src="https://www.pinclipart.com/picdir/big/72-729715_circle-circle-logo-template-png-clipart.png" alt="circle"></divv></td>
         <p><b>CIRCLE</b></p>
     </tr>
 </body>
