--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
             </tr>
         </tbody>
     </table>
-    <tr>
-        <td><divv class="circle-image"><img src="https://www.pinclipart.com/picdir/big/72-729715_circle-circle-logo-template-png-clipart.png" alt="circle"></divv></td>
-        <p><b>CIRCLE</b></p>
-    </tr>
+    <div class="containerr">
+        <div class="circlee">
+            <img src="https://media.forgecdn.net/avatars/340/532/637482426242610994.png" alt="Your Image">
+        </div>
+        <div class="textt">I am 1:1</div>
+    </div>
 </body>
 </html>
